@@ -1,3 +1,9 @@
+2009-02-10  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/bind.c, ext/oci8/oci8.h, ext/oci8/stmt.c: fix array DML
+	    and DateTime object problem. It didn't work with bind classes
+	    which overwrite 'set' and 'get'. (Reported by Leoš Bitto)
+	* test/test_array_dml.rb: fix to test array DML and DateTime object.
+
 2009-02-08  KUBO Takehiro  <kubo@jiubao.org>
 	* VERSION: change version from 2.0-svn to 2.0.0 to pass ruby
 	    gem's version string validator.
